style.css
.instagram-download-button {
    filter: invert(1);
    background-color: rgb(255, 255, 255);

    border-radius: 100%;

    z-index: 1;

    cursor: pointer;
}

.instagram-media-download-button {
    position: absolute;
    
    top: 8px;
    right: 8px;
}

.instagram-media-download-button > img {
    display: block;

    width: 25px;
    height: 25px;
}

.instagram-profile-download-button {
    position: absolute;
    
    bottom: -25%;
    left: 50%;

    transform: translate(-50%, 100%);
}

.instagram-profile-download-button > img {
    display: block;

    width: 25px;
    height: 25px;
}

